--- a/moneytransfer/package.json
+++ b/moneytransfer/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "antd": "^4.5.1",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "money": "^0.2.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
