--- a/moneytransfer/package.json
+++ b/moneytransfer/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
+    "sweetalert": "^2.1.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
