--- a/moneytransfer/package.json
+++ b/moneytransfer/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "date-fns": "^2.15.0",
     "money": "^0.2.0",
+    "netlify-cli": "^2.58.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
